--- a/lab1/lab1/Views/Cars/Details.cshtml
+++ b/lab1/lab1/Views/Cars/Details.cshtml
@@ -4,10 +4,10 @@
 <h1>Details From @Model.source</h1>
 
 <ul>
-    <li>Car Manufacturer : @car.Manufacturer</li>
-    <li>Car Model : @car.Model</li>
-    <li>Car Dscription : @Html.Raw(car.HtmlDescription)</li>
-    <li>Car Usage Duration : @($"{(DateTime.Now-car.FirstUseDate).Days/365} Years")</li>
+    <li>Car Manufacturer : @car?.Manufacturer</li>
+    <li>Car Model : @car?.Model</li>
+    <li>Car Dscription : @Html.Raw(car?.HtmlDescription)</li>
+    <li>Car Usage Duration : @($"{DateTime.Now.Year - car?.FirstUseDate.Year} Years")</li>
 </ul>
 
 <a href="/cars/allcars">back to all cars</a>
