--- a/lab2/lab2/Views/Tickets/EditTicketForm.cshtml
+++ b/lab2/lab2/Views/Tickets/EditTicketForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model TicketVM;
+﻿@model EditTicketVM;
 
 @{
     var departments = ViewData["Departments"] as IEnumerable<SelectListItem> ?? new List<SelectListItem>();
@@ -7,12 +7,18 @@
 
 <div class="card" style="width: 50vw;">
     <div class="card-body">
-        <form asp-action="AddTicket" method="post">
+        <form asp-action="EditTicketForm" method="post">
+
+            <div class="form-group">
+                <label asp-for="Id"></label>
+                <input class="form-control" asp-for="Id" />
+            </div>
+            
             <div class="form-group">
                 <label asp-for="CreatedDate"></label>
                 <input class="form-control" asp-for="CreatedDate" />
             </div>
-    
+
             <div class="form-group">
                 <input asp-for="IsClosed" />
                 <label asp-for="IsClosed"></label>
@@ -27,18 +33,18 @@
                 <label asp-for="Description"></label>
                 <input class="form-control" asp-for="Description" />
             </div>
-            
+
             <div class="form-group">
                 <label asp-for="Department"></label>
                 <select asp-for="Department" asp-items="departments"></select>
             </div>
-            
+
             <div class="form-group">
                 <label asp-for="Developers"></label>
                 <select asp-for="Developers" asp-items="developers"></select>
             </div>
 
-            <button class="btn btn-success"> Submit </button>
+            <button class="btn btn-success"> Apply </button>
         </form>
     </div>
 </div>
