--- a/lab4/presentationLayer/Views/Tickets/Add.cshtml
+++ b/lab4/presentationLayer/Views/Tickets/Add.cshtml
@@ -19,6 +19,16 @@
                 <input class="form-control" asp-for="Description" />
             </div>
 
+            <div class="form-group">
+                <label asp-for="Department"></label>
+                <select class="form-control" asp-for="Department" asp-items="ViewBag.Departments"></select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Developers"></label>
+                <select class="form-control" asp-for="Developers" asp-items="ViewBag.Developers"></select>
+            </div>
+
             <button class="btn btn-success"> Submit </button>
         </form>
     </div>
