--- a/lab4/presentationLayer/Views/Tickets/Index.cshtml
+++ b/lab4/presentationLayer/Views/Tickets/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EditTicketsVM>
+﻿@model IEnumerable<ReadTicketsVM>
 @{
     var TicketsList = Model;
 }
@@ -19,6 +19,8 @@
             <h4>Title : @(Ticket.Title)</h4>
             <h5 class="text-danger">Severity : @(Ticket.Severity)</h5>
             <h5 class="text-success">Description : @(Ticket.Description)</h5>
+            <h5 class="text-success">Department : @(Ticket.Department)</h5>
+            <h5 class="text-success">Number of Developers : @(Ticket.Developers)</h5>
 
             <div class="my-2"><a href="/Tickets/Details/@(Ticket.Id)"><button class="btn btn-warning w-100">Details</button></a></div>
         </div>
